--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
     error_log  /tmp/error.log;
     access_log /tmp/access.log;
     location / {
-      root /code;
+      root /slickapp;
       try_files $uri /index.html;
     }
   }
